--- a/style.css
+++ b/style.css
@@ -1,38 +1,92 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    list-style: none;
+    text-decoration: none;
+}
+
+body {
+    background-color: white;
+    font-family: Montserrat;
 }
 
 header {
     border: 2px solid pink;
+    
 }
 
+/* .menu-oculto {
+    display: none;
+} */
+/* en version movil el nav esta oculto y reemplazado pro hamburguesa */
+
 .menu-desktop {
+    background-color: gray;
+    border: 2px solid orange;
     display: flex;
-    list-style: none;
     justify-content: flex-end;
 }
 
+.menu-desktop li {
+    border: 2px solid red;
+    color: black;
+    margin: 10px;
+    text-align: center;
+    line-height: 50px;
+}
+
+.boton-contacto {
+    background-color: blueviolet;
+    color: white;
+    width: 150px;
+    height: 50px;
+    border-radius: 30px;
+    
+}
 
 
 
 
 .hero-padre {
-    border: 2px solid red;
+    border: 2px solid forestgreen;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
-    }
+        }
 
-    .button-color {
-        width: 200px;
-        height: 50px;
-        background-color: rebeccapurple;
-        border-radius: 20px;
-    }
+.hero-padre>h2 {
+    font-size: 30px;
+    margin: 0 0 5px;
+}
 
+.hero-padre>h1 {
+    font-size: 45px;
+    font-weight: 900;
+    color: blueviolet;
+    margin: 0 0 5px;
+}
+
+.hero-padre>p {
+    font-size: 16px;
+    color: blueviolet;
+    margin: 16px 0 40px;
+}
+
+
+
+.button-loque {
+    background-color: blueviolet;
+    color: white;
+    width: 150px;
+    height: 50px;
+    border-radius: 30px;
+    text-align: center;
+    line-height: 50px;
+}
 
 .hero-padre img {
     width: 443px;
@@ -47,27 +101,158 @@ header {
 
 
 
-
-
-
-
 .conocimientos {
     border: 2px solid violet;
+    text-align: center;
 }
+
+.padre-lenguajes {
+    margin: 10%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+
+.conocimientos ul li {
+    min-width: 180px;
+    height: 180px;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid black ;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+.devicon-amazonwebservices-original {
+    font-size: 60px;
+    color: blue;
+}
+
+
+
+
 
 .frase {
     border: 2px solid purple;
+    background-color: blueviolet;
+    text-align: center;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 }
+
+.frase>p::before {
+    content: "\201d";
+    font-size: 80px;
+    
+    }
+
+.frase h2 {
+    font-size: 25px;
+    margin:  0 20% 40px;
+}
+
+.frase p {
+    margin:  40px 20%;
+}
+
+
+
+
+
 
 .proyectos {
     border: 2px solid green;
+    margin: 40px 0 20px;
+}
+
+.proyectos h2 {
+    text-align: center;
+    margin: 30px 0 30px;
+    font-size: 40px;
+    font-weight: 900;
+}
+
+.nav-proyectos {
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.nav-proyectos>li {
+    font-size: 12px;
+    color: black;
+}
+
+.links-proyectos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.nav-proyectos .all {
+    width: 50px;
+    height: 20px;
+    background-color: blueviolet;
+    color: white;
+    text-align: center;
+    line-height: 20px;
+    border-radius: 20px;
+    margin-bottom: 25px;
+}
+
+.links-proyectos {
+    display: flex;
+    flex-direction: column;
+}
+
+.tarjeta {
+    border: 1px solid black;
+    border-radius: 5px;
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+    
 }
 
 
-
-
-
+/* footer */
 
 footer {
     border: 2px solid blue;
+    background-color: blueviolet;
 }
+
+
+/* .menu-oculto {
+    display: none;
+} */
+/* version movil el menu oculto */
+
+.menu-desktop-nav {
+    border: 2px solid orange;
+    display: flex;
+    justify-content: center;
+}
+
+.menu-desktop-nav li {
+    border: 2px solid red;
+    color:white;
+    margin: 10px;
+    text-align: center;
+    /* line-height: 50px; */
+}
+
+.redes-sociales {
+    display: flex;
+    justify-content: center;
+}
+
+footer p {
+    text-align: center;
+    color: white;
+}
+
+span
