--- a/style.css
+++ b/style.css
@@ -9,153 +9,287 @@
 }
 
 body {
-    background-color: white;
     font-family: Montserrat;
 }
 
 header {
     border: 2px solid pink;
-    
+    background-color: #fbcffc;
+    box-shadow: 0 0 29px 0 rgba(134, 134, 134, 0.25);
 }
 
-/* .menu-oculto {
-    display: none;
-} */
-/* en version movil el nav esta oculto y reemplazado pro hamburguesa */
+html {
+    scroll-behavior: smooth;
+}
 
-.menu-desktop {
-    background-color: gray;
-    border: 2px solid orange;
+
+.hamburguesa {
+    padding: 20px 20px;
     display: flex;
     justify-content: flex-end;
+
+}
+
+@media (max-width: 650px) {
+    .menu-desaparece {
+        display: none;
+        
+    }
+   
+}
+
+@media (min-width: 650px) {
+    .hamburguesa {
+        display: none;
+    }
+}
+
+
+.menu-desktop {
+    border: 2px solid orange;
+    height: 56px;
+    padding: 0 30px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .menu-desktop li {
     border: 2px solid red;
     color: black;
-    margin: 10px;
-    text-align: center;
-    line-height: 50px;
+    height: 40px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+       
+}
+
+.menu-desktop li a:visited {
+    color: black;
+}
+
+.boton-contacto a:link {
+    color: white;
+}
+
+.boton-contacto a:visited {
+    color: white;
 }
 
 .boton-contacto {
-    background-color: blueviolet;
+    background-color: #d2a6e7;
+    color: white;
+    width: 150px;
+    height: 40px;
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    
+}
+
+.boton-contacto a:visited {
+    color: white;
+}
+
+
+
+
+
+
+
+/* SECCION HERO */
+
+.hero-padre {
+    border: 2px solid forestgreen;
+    /* margin-top: 50px; */
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (min-width: 1080px){
+    .hero-padre {
+        display: flex;
+        flex-direction: row;
+    } 
+}
+
+.hero-texto {
+    width: 90%;
+    border: 1px solid red;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
+}
+
+@media (min-width: 1080px){
+    .hero-texto {
+        align-items: flex-start;
+        padding-left: 10%;  
+    }
+}
+
+.hero-texto h2 {
+    font-size: 30px;
+    margin: 0 0 5px;
+}
+
+.hero-texto h1 {
+    font-size: 45px;
+    font-weight: 900;
+    color: #be79df;
+    margin: 0 0 5px;
+}
+
+.hero-texto p {
+    font-size: 16px;
+    color: gray;
+    margin: 16px 0 40px;
+}
+
+
+.button-loque {
+    background-color: #be79df;
     color: white;
     width: 150px;
     height: 50px;
     border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.imagen-hero {
+    width: 90%;
+    border: 1px solid blue;
+}
+
+.imagen-hero img {
+    width: 100%;
+    
     
 }
 
 
 
 
-.hero-padre {
-    border: 2px solid forestgreen;
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-        }
-
-.hero-padre>h2 {
-    font-size: 30px;
-    margin: 0 0 5px;
-}
-
-.hero-padre>h1 {
-    font-size: 45px;
-    font-weight: 900;
-    color: blueviolet;
-    margin: 0 0 5px;
-}
-
-.hero-padre>p {
-    font-size: 16px;
-    color: blueviolet;
-    margin: 16px 0 40px;
-}
-
-
-
-.button-loque {
-    background-color: blueviolet;
-    color: white;
-    width: 150px;
-    height: 50px;
-    border-radius: 30px;
-    text-align: center;
-    line-height: 50px;
-}
-
-.hero-padre img {
-    width: 443px;
-    height: 443px;
-}
-
-
-
-
-
+/* SECCION MIS CONOCIMIENTOS */
 
 
 
 
 .conocimientos {
     border: 2px solid violet;
+    background-color: #d5ebf2;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.conocimientos-texto {
+    border: 1px solid red;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
 }
 
+.conocimientos-texto h2 {
+    border: 1px solid violet;
+    font-size: 45px;
+    font-weight: 900;
+    
+ 
+}
+
+.conocimientos-texto p {
+    border: 1px solid violet;
+    margin: 0  20% 20px;
+}
+
+
+
+
 .padre-lenguajes {
-    margin: 10%;
+    width: 70%;
+    max-width: 650px;
+    border: 1px solid blue;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
 
 
-.conocimientos ul li {
+.tarjeta-lenguajes {
     min-width: 180px;
-    height: 180px;
-    background-color: rgb(255, 255, 255);
-    border: 1px solid black ;
+    height: 180px; 
+        background-color: rgb(255, 255, 255);
+    border: 1px solid gray;
     border-radius: 5px;
     margin: 5px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.devicon-amazonwebservices-original {
-    font-size: 60px;
-    color: blue;
+
+
+.conocimientos i {
+    font-size: 70px;
+}
+
+.conocimientos p {
+    padding-top: 10px;
+    font-size: 20px;
+    font-weight: 700;
 }
 
 
 
+
+
+
+
+/* SECCION FRASE  */
 
 
 .frase {
-    border: 2px solid purple;
+    
+    border: 1px solid purple;
     background-color: blueviolet;
-    text-align: center;
     color: white;
+    text-align: center;
+    padding-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
 }
 
-.frase>p::before {
-    content: "\201d";
-    font-size: 80px;
-    
-    }
+.quote {
+
+    font-size: 20px;  
+    font-weight: 900; 
+    padding: 40px 0; 
+}
 
 .frase h2 {
     font-size: 25px;
-    margin:  0 20% 40px;
+    width: 90%;
+    padding: 40px 0;
 }
 
 .frase p {
-    margin:  40px 20%;
+   width: 90%;
+   max-width: 900px;
+   padding-bottom: 40px;
 }
 
 
@@ -163,28 +297,68 @@ header {
 
 
 
-.proyectos {
+
+
+/* MIS PROYECTOS  */
+
+
+
+.proyectos-padre {
     border: 2px solid green;
     margin: 40px 0 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.proyectos h2 {
+.proyectos-padre h2 {
     text-align: center;
     margin: 30px 0 30px;
     font-size: 40px;
     font-weight: 900;
 }
 
-.nav-proyectos {
-    display: flex;
-    justify-content: space-around;
-    
-}
 
-.nav-proyectos>li {
+.proyectos {
+    border: 1px solid red;
     font-size: 12px;
     color: black;
+    padding: 0 20px;
+   
 }
+
+
+.button {
+    border: 0;
+    
+    padding: 20 px;
+    margin: 20 px;
+}
+
+.button-all {
+    border: 0;
+    padding: 5px 20px;
+    background-color: blueviolet;
+    color: white;
+    border-radius: 20px;
+    margin-bottom: 25px;
+}
+
+.button-langs {
+    
+    padding: 5px 20px;
+    background-color: transparent;
+    color: black;
+    border-radius: 20px;
+    margin-bottom: 25px;
+
+}
+
+
+
+
+
 
 .links-proyectos {
     display: flex;
@@ -192,33 +366,28 @@ header {
     align-items: center;
 }
 
-.nav-proyectos .all {
-    width: 50px;
-    height: 20px;
-    background-color: blueviolet;
-    color: white;
-    text-align: center;
-    line-height: 20px;
-    border-radius: 20px;
-    margin-bottom: 25px;
-}
 
-.links-proyectos {
-    display: flex;
-    flex-direction: column;
-}
 
-.tarjeta {
-    border: 1px solid black;
-    border-radius: 5px;
-    text-align: center;
-    padding: 10px;
-    margin: 10px;
+
+
+
+.proyectos-padre li {
+    width: 90%;
     
 }
 
+.proyectos-padre li img {
+    width: 100%;
+    height: auto;
+}
 
-/* footer */
+
+
+
+
+
+
+
 
 footer {
     border: 2px solid blue;
@@ -226,33 +395,62 @@ footer {
 }
 
 
-/* .menu-oculto {
+.menu-oculto {
     display: none;
-} */
-/* version movil el menu oculto */
+}
+
+@media (min-width: 700px){
+    .menu-oculto{
+        display: block;
+    }
+}
+
 
 .menu-desktop-nav {
     border: 2px solid orange;
+    padding-top: 30px;
     display: flex;
     justify-content: center;
 }
 
 .menu-desktop-nav li {
     border: 2px solid red;
-    color:white;
-    margin: 10px;
+    margin: 0 10px;
     text-align: center;
-    /* line-height: 50px; */
+    
 }
 
+.menu-desktop-na li a {
+    
+}
+
+
+
 .redes-sociales {
+    border: 2px solid goldenrod;
     display: flex;
     justify-content: center;
 }
 
+.redes-sociales>li {
+    margin: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: white;
+    text-align: center;
+    line-height: 40px;
+}
+
+
+
+
+
+
+
 footer p {
     text-align: center;
     color: white;
+    margin-bottom: 60px;
 }
 
-span
