--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ header {
     align-items: center;
 }
 
+/* html viene antes que body, por lo que deberia estar antes tambien en los estilos */
+
 html {
     scroll-behavior: smooth;
 }
@@ -29,6 +31,7 @@ html {
 
 .hamburguesa {
     padding: 20px 20px;
+    /* las tres ordenes que siguen no son necesarias */
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -49,6 +52,7 @@ html {
 
 
 .menu-desktop {
+    /* ni height ni justify content son necesarios aqui */
     height: 56px;
     padding: 0 30px;
     display: flex;
@@ -57,6 +61,7 @@ html {
 }
 
 .menu-desktop li {
+    /* height no se aplica aqui (los li son elementos en linea) */
     height: 40px;
     padding: 20px;
     display: flex;
@@ -164,6 +169,7 @@ a {
 
 .conocimientos {
     background-color:  #cff1ef;
+    /* no es necesario color black, es el que viene por defecto */
     color: black;
     padding: 100px 0;    
     display: flex;
@@ -175,6 +181,7 @@ a {
     width: 90%;
     display: flex;
     flex-direction: column;
+    /* align items center no es necesario aqui */
     align-items: center;
     text-align: center;
 }
@@ -291,6 +298,7 @@ a {
     padding: 100px 0;
     display: flex;
     flex-direction: column;
+    /* no es necesario este justify-content: aqui */
     justify-content: flex-start;
     align-items: center;
 }
